# route_graph_webui

./: .env.example  .gitignore  README.md  README.zh-CN.md  TODO.md  __init__.py  auto_route_planner.py  bootstrap_paths.py  calculer.py  candidate_conversion.py  composed_video.py  edge_intent_service.py  env_registry.py  geometry.py  graph_canvas_view.py  graph_editor.py  graph_grouping.py  graph_gui.py  graph_io.py  graph_meta.py  graph_model.py  graph_record.py  graph_schema.py  graph_store.py  graph_ui_state.py  graph_validation.py  graph_versioning.py  mission_export.py  mission_io.py  mission_repair.py  pyproject.toml  requirements-dev.txt  requirements-runtime.txt  resample.py  route_generation_worker.py  route_planner.py  runtime.py  start.bat  start_dev.bat  takeoff_landing_repair.py  (+2 more)
docs/: README.md
mission_export/: __init__.py  config.py  exporter.py  group_context.py  sampling.py  smoothing.py
preview/: render_background_contours.py
requirements/: dev.txt
tests/: __init__.py  conftest.py  route_graph_test_helpers.py  test_api_contracts.py  test_auto_route_planner.py  test_cli_args.py  test_composed_video.py  test_env_registry_local.py  test_final_package_boundaries.py  test_graph_gui_color_groups.py  test_graph_gui_helpers.py  test_graph_module_split.py  test_graph_record_cli.py  test_graph_schema.py  test_graph_validation.py  test_mission_export.py  test_mission_repair.py  test_package_skeleton.py  test_route_graph.py  test_route_planner.py  test_runtime_decoupling.py  test_shared_utils.py  test_stage4_backend_split.py  test_storage_contracts.py  (+1 more)
(+155 files in other folders)
