[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "route-graph-webui"
version = "0.1.0"
description = "Route graph planning and WebUI tooling for UAV missions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100",
  "pydantic>=2",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
]
media = [
  "numpy>=1.24",
  "Pillow>=10",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"route_graph_webui.resources" = ["*.json"]
